# ff-bot

./: pyproject.toml
src/ff_bot/: __init__.py
