[project]
name = "ff-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Nathaniel Rodriguez",email = "golansy0@gmail.com"}
]
license = {text = "GNU GPL v3"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "espn-api (>=0.45.1,<0.46.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "discord (>=2.3.2,<3.0.0)"
]

[tool.poetry]
name = "ff-bot"
version = "0.1.0"
description = ""
authors = ["Nathaniel Rodriguez"]
packages = [{ include = "ff-bot", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
ruff = "^0.14.0"
mypy = "^1.18.2"
pre-commit = "^4.3.0"
types-pyyaml = "^6.0.12.20250915"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
